app/task-app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-manager-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: task-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 8080
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 3000
